fixed z-index bugs

--- a/app/components/Bookshelves/Bookshelves.module.scss
+++ b/app/components/Bookshelves/Bookshelves.module.scss
@@ -23,7 +23,6 @@
 			justify-content: center;
 			align-items: center;
 			gap: 30px;
-			z-index: 100000;
 			@include medium {
 				top: 340px;
 				left: 60px;
