--- a/app/components/Header/Header.module.scss
+++ b/app/components/Header/Header.module.scss
@@ -44,7 +44,7 @@
 			backdrop-filter: blur(20px);
 			width: 100%;
 			height: 100%;
-			z-index: 1000;
+			z-index: 9999;
 			opacity: 0;
 			visibility: hidden;
 			transition: 0.5s all ease;
@@ -54,6 +54,7 @@
 				opacity: 1;
 				visibility: visible;
 				transition: 0.5s all ease;
+				z-index: 9999;
 			}
 		}
 
@@ -63,7 +64,7 @@
 			@include medium {
 				flex-direction: column;
 				align-items: center;
-				width: 180px;
+				width: 200px;
 				height: 100vh;
 				padding-top: 150px;
 				background-color: rgb(143, 126, 126);
@@ -72,6 +73,7 @@
 				transition: 0.3s all ease;
 				opacity: 0;
 				visibility: hidden;
+				z-index: 9999;
 			}
 			&__active {
 				@include medium {
